<resources>
    <string name="app_name">AutoBroker</string>
    <string name="greetings_message">Welcome to AutoBroker</string>
    <string name="label_login">Login</string>
    <string name="or">or</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="hint_city">City</string>
    <string name="hint_email_input">Your e-mail</string>
    <string name="hint_password_input">Your password</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_country">Country</string>
    <string name="label_input_your_city">Input your city</string>
    <string name="label_need_more_information">We need a little more information</string>
    <string name="label_your_region">Your region</string>
    <string name="label_registration_message_prompt">Fill some data to achieve best practice in app</string>
    <string name="label_synchronization">Synchronization</string>
    <string name="label_empty_regions">Region list is empty</string>
    <string name="label_select_region">Please, select region</string>
    <string name="label_input_email">or Login with E-mail</string>
    <string name="label_settings">Settings</string>
    <string name="label_registration">Registration</string>
    <string name="label_home">Home</string>
    <string name="label_finder">Finder</string>
    <string name="label_logout">Logout</string>
    <string name="label_full_info">Full details</string>
    <string name="label_region">Region</string>
    <string name="label_city">City</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Phone</string>
    <string name="label_select_car_model">Click here, to select the car model</string>
    <string name="error_error_occurred">Error occurred</string>
    <string name="error_field_empty">Required field is empty</string>
    <string name="error_no_such_user">No user with such e-mail or incorrect password!</string>
    <string name="error_fail_login">Error occurred when login!</string>
    <string name="error_required_fields_empty">One of required field is empty!</string>
    <string name="title_full_details">Full details</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="hint_title">Title</string>
    <string name="hint_price">Price</string>
    <string name="hint_mileage">Mileage</string>
    <string name="label_add_more_images">Add more images</string>
    <string name="label_click_pick_to_choose">Click on picture to choose image</string>
    <string name="label_action_pick_image">Select image</string>
    <string name="label_region_code">Code</string>
    <string name="label_number">Number</string>
    <string name="label_serial">Serial</string>
    <string name="error_region_code_invalid">Code is invalid</string>
    <string name="error_number_invalid">Number is invalid</string>
    <string name="msg_select_model">Please select the car model!</string>
    <string name="msg_no_car_added">You don\'t have a single car yet.</string>
    <string name="btn_lets_create">Lets create!</string>
    <string name="label_greetings_subhead">Access account</string>
    <string name="label_sign_google">Sign in</string>
    <string name="label_set_pin">Now create and enter your pin</string>
    <string name="label_no_connection">No network</string>
    <string name="label_wait_some_time">Loading, please wait a little time…</string>
    <string name="msg_unknow_error">Something went wrong…</string>
    <string name="msg_upload_successfull">Successfully created!</string>
    <string name="msg_upload_failed">Failed to create…</string>
</resources>